<resources>
    <string name="app_name">AutosMaterial</string>
    <string name="crear">REGISTRAR CARRO</string>
    <string name="listar">LISTAR CARRO</string>
    <string name="registro">REGISTRO DE CARRO</string>
    <string name="placa">PLACA</string>
    <string name="marca">MARCA</string>
    <string name="modelo">MODELO</string>
    <string name="color">COLOR</string>
    <string name="precio">PRECIO</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">BORRAR</string>
    <string name="eliminar">Eliminar</string>
    <string name="kia">KIA</string>
    <string name="mazda">MAZDA</string>
    <string name="dodge">DODGE</string>
    <string name="ford">FORD</string>
    <string name="bmw">BMW</string>
    <string name="año1">2008</string>
    <string name="año2">1998</string>
    <string name="año3">1972</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="mensaje_guardado">Automóvil guardado exitosamente</string>
    <string name="mensaje_error">Favor diligenciar campo requerido</string>
    <string name="titulo_detalle">Detalle Automóvil</string>
    <string-array name="colores">
        <item>@string/rojo</item>
        <item>@string/blanco</item>
    </string-array>

    <string-array name="modelos">
        <item>@string/año1</item>
        <item>@string/año2</item>
        <item>@string/año3</item>
    </string-array>

    <string-array name="marcas">
        <item>@string/kia</item>
        <item>@string/mazda</item>
        <item>@string/ford</item>
        <item>@string/bmw</item>
    </string-array>

    <string-array name="opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </string-array>
</resources>